--- a/styles/styles.css
+++ b/styles/styles.css
@@ -585,3 +585,10 @@ footer p {
     margin-left: 5rem;
   }
 }
+.myOwl-carousel{
+  padding: 1em;
+  background-color: rgba(3, 51, 85, 0.50);
+  position: absolute !important;
+  bottom: 0px;
+  margin-top: 1rem;
+}
